<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/btn_where_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/transparent"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:hint="@string/where_to"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/button_nearby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:textSize="21sp"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textAllCaps="false"
            android:text="@string/nearby"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:text="@string/recent_searches"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/lbl_no_recent_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:textAlignment="textStart"
        android:text="@string/no_recent_searches"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"/>

</LinearLayout>